--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "cli-progress": "^3.9.0",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "pkg-versions": "^2.1.0"
   }
 }
