Change name, description and main file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-project-automation",
+  "name": "reexjs-cli",
   "version": "0.1.0",
-  "description": "Project that automatize create projects with nextjs",
-  "main": "app.js",
+  "description": "An interactive CLI automation toll for create react projects most fast and efficiently. ⚛️",
+  "main": "src/index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-json-modules src/index.mjs"
