--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-json-modules src/index.mjs"
+    "start": "npx node --experimental-json-modules src/index.mjs"
   },
   "keywords": [
     "automatization",
