--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "reexjs-cli",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "An interactive CLI automation toll for create react projects most fast and efficiently. ⚛️",
   "main": "src/index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx node --experimental-json-modules src/index.mjs"
+    "start": "node --experimental-json-modules src/index.mjs start",
+    "reexjs-cli": "node --experimental-json-modules src/index.mjs start"
   },
   "keywords": [
     "automatization",
