--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-json-modules src/index.mjs start",
-    "build": "node --experimental-json-modules src/scripts/minify.mjs && npm pack --dry-run"
+    "start": "node --experimental-json-modules src/index.mjs start"
   },
   "keywords": [
     "automatization",
