--- a/package.json
+++ b/package.json
@@ -1,42 +1,46 @@
 {
-  "name": "reexjs-cli",
-  "version": "0.3.6",
-  "description": "An interactive CLI automation tool 🛠️ for create react projects most fast and efficiently. ⚛️",
-  "main": "src/index.mjs",
-  "bin": {
-    "reexjs-cli": "src/index.mjs"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-json-modules src/index.mjs start"
-  },
-  "keywords": [
-    "automatization",
-    "nextjs",
-    "reactjs",
-    "react-router-dom",
-    "cli",
-    "es6",
-    "tool",
-    "react"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/a12989x/reexjs-cli.git"
-  },
-  "author": "codax",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/a12989x/reexjs-cli/issues"
-  },
-  "type": "module",
-  "homepage": "https://github.com/a12989x/reexjs-cli#readme",
-  "dependencies": {
-    "chalk": "^4.1.1",
-    "figlet": "^1.5.0",
-    "glob": "^7.1.7",
-    "inquirer": "^8.0.0",
-    "ora": "^5.4.0",
-    "terser": "^5.7.0"
-  }
+    "name": "reexjs-cli",
+    "version": "0.3.6",
+    "description": "An interactive CLI automation tool 🛠️ for create react projects most fast and efficiently. ⚛️",
+    "main": "lib/index.mjs",
+    "bin": {
+        "reexjs-cli": "lib/index.mjs"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node --experimental-json-modules src/index.mjs start",
+        "build": "node --experimental-json-modules src/scripts/minify.mjs start"
+    },
+    "keywords": [
+        "automatization",
+        "nextjs",
+        "reactjs",
+        "react-router-dom",
+        "cli",
+        "es6",
+        "tool",
+        "react"
+    ],
+    "files": [
+        "lib"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/a12989x/reexjs-cli.git"
+    },
+    "author": "codax",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/a12989x/reexjs-cli/issues"
+    },
+    "type": "module",
+    "homepage": "https://github.com/a12989x/reexjs-cli#readme",
+    "dependencies": {
+        "chalk": "^4.1.1",
+        "figlet": "^1.5.0",
+        "glob": "^7.1.7",
+        "inquirer": "^8.0.0",
+        "ora": "^5.4.0",
+        "terser": "^5.7.0"
+    }
 }
