--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "reexjs-cli",
     "version": "0.3.8",
     "description": "An interactive CLI automation tool 🛠️ for create react projects most fast and efficiently. ⚛️",
-    "main": "lib/index.mjs",
+    "main": "src/index.mjs",
     "bin": {
         "reexjs-cli": "lib/index.mjs"
     },
