--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
     "name": "reexjs-cli",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "An interactive CLI automation tool 🛠️ for create react projects most fast and efficiently. ⚛️",
-    "main": "src/index.mjs",
+    "main": "lib/index.mjs",
     "bin": {
-        "reexjs-cli": "src/index.mjs"
+        "reexjs-cli": "lib/index.mjs"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node --experimental-json-modules src/index.mjs start",
-        "build": "node --experimental-json-modules src/scripts/minify.mjs"
+        "prebuild": "rm -rf lib",
+        "build": "node --experimental-json-modules src/scripts/minify.mjs start"
     },
     "keywords": [
         "automatization",
