--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
         "ora": "^5.4.0"
     },
     "devDependencies": {
+        "cz-conventional-changelog": "^3.3.0",
         "terser": "^5.7.0"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
