--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "commander": "^8.2.0",
     "figlet": "^1.5.2",
     "glob": "^7.2.0",
-    "inquirer": "^8.1.5",
-    "ora": "^6.0.1"
+    "inquirer": "^8.1.5"
   },
   "devDependencies": {
+    "@types/inquirer": "^8.1.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
