--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,20 +14,5 @@
     "prettier",
     "@typescript-eslint"
   ],
-  "parser": "@typescript-eslint/parser",
-  "rules": {
-    "semi": "error",
-    "eol-last": "error",
-    "indent": ["error", 2],
-    "key-spacing": ["error"],
-    "no-unused-vars": "error",
-    "no-multi-spaces": "error",
-    "space-infix-ops": "warn",
-    "no-trailing-spaces": "error",
-    "newline-before-return": "error",
-    "object-curly-spacing": ["error", "always"],
-    "comma-spacing": ["error", { "before": false, "after": true }],
-    "import/newline-after-import": ["error", { "count": 1 }],
-    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1 }]
-  }
+  "parser": "@typescript-eslint/parser"
 }
